--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dia</title>
-  <link rel="icon" href="/favicon.3d3264b4.ico">
+  <link rel="icon" href="./favicon.3d3264b4.ico">
   <script src="https://kit.fontawesome.com/0e31e8da5a.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,regular,500,600,700,800,300italic,italic,500italic,600italic,700italic,800italic" rel="stylesheet">
-  <link rel="stylesheet" href="/main.48b3db1d.css">
-<script src="/main.48b3db1d.js"></script></head>
+  <link rel="stylesheet" href="./main.48b3db1d.css">
+<script src="./main.48b3db1d.js"></script></head>
 
 <body class="page__content">
   <header class="header">
@@ -18,7 +18,7 @@
       <div class="header__content">
         <div class="header__navigation">
           <a class="logo header__logo" href="#">
-            <img class="logo__img" src="/Logo.b7d82caa.png" alt="Dia logo">
+            <img class="logo__img" src="./Logo.b7d82caa.png" alt="Dia logo">
           </a>
 
           <a class="header__menu-icon" href="#menu"></a>
@@ -50,44 +50,44 @@
       <div class="header__slider">
         <div class="header__slide">
           <picture>
-            <source media="(min-width: 2560px)" srcset="/LargeDesktop1.4784c4cd.png">
-            <source media="(min-width: 1280px)" srcset="/desktop1.5b2cfda4.png">
-            <source media="(min-width: 1024px)" srcset="/smallDesktop1.de2c7e06.png">
-            <source media="(min-width: 640px)" srcset="/Tablet1.95b3a8c3.png">
-            <source media="(min-width: 320px)" srcset="/mobile1.061d2a80.png">
-            <img src="/mobile1.061d2a80.png" alt="">
+            <source media="(min-width: 2560px)" srcset="./LargeDesktop1.4784c4cd.png">
+            <source media="(min-width: 1280px)" srcset="./desktop1.5b2cfda4.png">
+            <source media="(min-width: 1024px)" srcset="./smallDesktop1.de2c7e06.png">
+            <source media="(min-width: 640px)" srcset="./Tablet1.95b3a8c3.png">
+            <source media="(min-width: 320px)" srcset="./mobile1.061d2a80.png">
+            <img src="./mobile1.061d2a80.png" alt="">
           </picture>
         </div>
 
         <div class="header__slide">
           <picture>
-            <source media="(min-width: 2560px)" srcset="/LargeDesktop2.0b8d390f.png">
-            <source media="(min-width: 1280px)" srcset="/desktop2.8843bacd.png">
-            <source media="(min-width: 1024px)" srcset="/smallDesktop2.806a7ada.png">
-            <source media="(min-width: 640px)" srcset="/Tablet2.6de6c5b9.png">
-            <source media="(min-width: 320px)" srcset="/mobile2.94cf7c3d.png">
-            <img src="/mobile2.94cf7c3d.png" alt="">
+            <source media="(min-width: 2560px)" srcset="./LargeDesktop2.0b8d390f.png">
+            <source media="(min-width: 1280px)" srcset="./desktop2.8843bacd.png">
+            <source media="(min-width: 1024px)" srcset="./smallDesktop2.806a7ada.png">
+            <source media="(min-width: 640px)" srcset="./Tablet2.6de6c5b9.png">
+            <source media="(min-width: 320px)" srcset="./mobile2.94cf7c3d.png">
+            <img src="./mobile2.94cf7c3d.png" alt="">
           </picture>
         </div>
 
         <div class="header__slide">
           <picture>
-            <source media="(min-width: 2560px)" srcset="/LargeDesktop3.fdd37be8.png">
-            <source media="(min-width: 1280px)" srcset="/desktop3.4275c3d9.png">
-            <source media="(min-width: 1024px)" srcset="/smallDesktop3.c2f973d8.png">
-            <source media="(min-width: 640px)" srcset="/Tablet3.e89327e0.png">
-            <source media="(min-width: 320px)" srcset="/mobile3.b7abdd69.png">
-            <img src="/mobile3.b7abdd69.png" alt="">
+            <source media="(min-width: 2560px)" srcset="./LargeDesktop3.fdd37be8.png">
+            <source media="(min-width: 1280px)" srcset="./desktop3.4275c3d9.png">
+            <source media="(min-width: 1024px)" srcset="./smallDesktop3.c2f973d8.png">
+            <source media="(min-width: 640px)" srcset="./Tablet3.e89327e0.png">
+            <source media="(min-width: 320px)" srcset="./mobile3.b7abdd69.png">
+            <img src="./mobile3.b7abdd69.png" alt="">
           </picture>
         </div>
 
         <div class="header__slider-descr" style="display: block">
           <div class="header__slider-shevrons">
             <div class="header__slider-shevron-left">
-              <img class="header__shevron-left-img" src="/chevron_left.3164de7b.png" alt="shevron-left">
+              <img class="header__shevron-left-img" src="./chevron_left.3164de7b.png" alt="shevron-left">
             </div>
             <div class="header__slider-shevron-right">
-              <img class="header__shevron-right-img" src="/chevron_right.7bbed051.png" alt="shevron-right">
+              <img class="header__shevron-right-img" src="./chevron_right.7bbed051.png" alt="shevron-right">
             </div>
           </div>
           <h3 class="header__slider-title">Intro</h3>
@@ -102,7 +102,7 @@
       <div class="container">
         <div class="menu__navigation">
           <a href="#" class="logo menu__logo">
-            <img src="/Logo.b7d82caa.png" alt="Dia logo">
+            <img src="./Logo.b7d82caa.png" alt="Dia logo">
           </a>
           <a class="menu__close-icon" href="#"></a>
         </div>
@@ -124,7 +124,7 @@
         </div>
       </div>
     </div>
-    
+
   </header>
 
   <section class="page__section about" id="about">
@@ -143,7 +143,7 @@
       <div class="expertise__cards">
         <div class="expertise__card">
           <div class="expertise__card-img">
-            <img class="expertise__card-photo" src="/image1.d1cc9236.png" alt="card-img">
+            <img class="expertise__card-photo" src="./image1.d1cc9236.png" alt="card-img">
           </div>
           <h4 class="expertise__card-title">Branding</h4>
           <p class="
@@ -154,7 +154,7 @@
         </div>
         <div class="expertise__card">
           <div class="expertise__card-img">
-            <img src="/image2.eb9d1e26.png" alt="card-img">
+            <img src="./image2.eb9d1e26.png" alt="card-img">
           </div>
           <h4 class="expertise__card-title">Communication</h4>
           <p class="
@@ -165,7 +165,7 @@
         </div>
         <div class="expertise__card">
           <div class="expertise__card-img">
-            <img src="/image3.e5c1b128.png" alt="card-img">
+            <img src="./image3.e5c1b128.png" alt="card-img">
           </div>
           <h4 class="expertise__card-title">Strategy</h4>
           <p class="
@@ -202,7 +202,7 @@
             <li class="services__item">Packaging</li>
           </ul>
           <a class="services__link" href="#services">
-            <img class="services__img" src="/Vector.75d3614f.svg" alt="vector">
+            <img class="services__img" src="./Vector.75d3614f.svg" alt="vector">
           </a>
           <a href="#services" class="services__more">Learn more</a>
         </div>
@@ -216,7 +216,7 @@
             <li class="services__item">Post Production</li>
           </ul>
           <a class="services__link" href="#services">
-            <img class="services__img" src="/Vector.75d3614f.svg" alt="vector">
+            <img class="services__img" src="./Vector.75d3614f.svg" alt="vector">
           </a>
           <a href="#services" class="services__more">Learn more</a>
         </div>
@@ -230,7 +230,7 @@
             <li class="services__item">Blog Content & SEO</li>
           </ul>
           <a class="services__link" href="#services">
-            <img class="services__img" src="/Vector.75d3614f.svg" alt="vector">
+            <img class="services__img" src="./Vector.75d3614f.svg" alt="vector">
           </a>
           <a href="#services" class="services__more">Learn more</a>
         </div>
@@ -244,7 +244,7 @@
             <li class="services__item">Strategic Partnerships</li>
           </ul>
           <a class="services__link" href="#services">
-            <img class="services__img" src="/Vector.75d3614f.svg" alt="vector">
+            <img class="services__img" src="./Vector.75d3614f.svg" alt="vector">
           </a>
           <a href="#services" class="services__more">Learn more</a>
         </div>
@@ -260,10 +260,10 @@
       <div class="testimonials__cards">
         <div class="testimonials__card">
           <div class="testimonials__card-img">
-            <img class="testimonials__card-photo" src="/img1.93f7e560.jpg" alt="img1">
+            <img class="testimonials__card-photo" src="./img1.93f7e560.jpg" alt="img1">
           </div>
           <div class="testimonials__quotes">
-            <img class="testimonials__quotes-sign" src="/quotes.65059528.png" alt="quotes">
+            <img class="testimonials__quotes-sign" src="./quotes.65059528.png" alt="quotes">
           </div>
           <p class="testimonials__text">AIR's ideas are refreshing and out of the box. Authentic team that focuses on
             the important path of the brand.</p>
@@ -272,10 +272,10 @@
         </div>
         <div class="testimonials__card">
           <div class="testimonials__card-img">
-            <img class="testimonials__card-photo" src="/img2.72b3fd8d.jpg" alt="img2">
+            <img class="testimonials__card-photo" src="./img2.72b3fd8d.jpg" alt="img2">
           </div>
           <div class="testimonials__quotes">
-            <img class="testimonials__quotes-sign" src="/quotes.65059528.png" alt="quotes">
+            <img class="testimonials__quotes-sign" src="./quotes.65059528.png" alt="quotes">
           </div>
           <p class="testimonials__text testimonials__text--special-margin">
             AIR is an exceptional agency that leads with creative talent, first-class account servicing.
@@ -285,10 +285,10 @@
         </div>
         <div class="testimonials__card">
           <div class="testimonials__card-img">
-            <img class="testimonials__card-photo" src="/img3.b4667b05.png" alt="img3">
+            <img class="testimonials__card-photo" src="./img3.b4667b05.png" alt="img3">
           </div>
           <div class="testimonials__quotes">
-            <img class="testimonials__quotes-sign" src="/quotes.65059528.png" alt="quotes">
+            <img class="testimonials__quotes-sign" src="./quotes.65059528.png" alt="quotes">
           </div>
           <p class="testimonials__text">AIR raises the agency bar to stratospheric heights on both creative output and
             client service.</p>
@@ -361,7 +361,7 @@
     <div class="container">
       <div class="footer__wrapper">
         <a href="#" class="footer__logo logo">
-          <img class="footer__logo-img" src="/Logo.b7d82caa.png" alt="Dia logo">
+          <img class="footer__logo-img" src="./Logo.b7d82caa.png" alt="Dia logo">
         </a>
         <div class="footer__items">
           <div class="footer__item menu__item">
@@ -384,7 +384,7 @@
     </div>
   </footer>
 
-  <script type="module" src="/main.d8ebb8d6.js"></script>
+  <script type="module" src="./main.d8ebb8d6.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
 </body>
 
